# standard-directive-backend-rust

./: Cargo.toml  Dockerfile
src/: lib.rs  main.rs
src/application/: auth_token_test.rs  convert_string_to_date.rs  generate_token.rs  has_password.rs  is_password_correct.rs  mod.rs  struct_to_document.rs  validate_token.rs
src/controllers/: get_calendar_by_date_controller.rs  get_calendars_controller.rs  mod.rs  post_save_event_controller.rs  post_save_events_controller.rs
src/controllers/tasks/: get_tasks_controller.rs  mod.rs  post_add_task_controller.rs
src/controllers/trackers/: delete_tracker.rs  get_trackers_controller.rs  mod.rs  post_add_trackers_controller.rs
src/controllers/users/: login_controller.rs  mod.rs  register_user_controller.rs  update_password_controller.rs
src/data_access/: add_event_to_db.rs  get_calendar_by_date.rs  get_calendars_from_db.rs  mod.rs  update_calendar.rs
src/data_access/tasks/: add_task_to_db.rs  get_tasks_from_db.rs  mod.rs  update_tasks.rs
src/data_access/trackers/: add_trackers_db.rs  get_trackers_from_db.rs  mod.rs
src/data_access/users/: add_user_db.rs  find_user_by_email.rs  find_user_by_id.rs  find_user_by_username.rs  is_code_valid.rs  is_email_free.rs  is_username_free.rs  mod.rs  update_password.rs
src/domain/models/: auth_token.rs  calendar.rs  calendar_db.rs  calendar_to_save.rs  event.rs  mod.rs  response.rs  save_tasks_view_model.rs  task.rs  trackers.rs  user.rs  user_login.rs
src/routers/: calendar_router.rs  mod.rs  tasks_router.rs  trackers_routers.rs  users_router.rs
