[package]
name = "standard-directive-n2-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "1", features = ["full"]}
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util= {version = "0.1", features=["full"]}
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
mongodb = "2.0"  
bson = "2.0"     
